Etape 4.8 : job et controller rest pour la detection d'anomalie